--- a/file_upload_app/src/App.css
+++ b/file_upload_app/src/App.css
@@ -1,1 +1,15 @@
-
+.App{
+  display: flex;
+  min-height: 100vh;
+}
+.V_Center{
+  flex: 1;
+  align-self: center;
+}
+.FileUpload{
+  border: 1px solid #eee;
+  border-radius: 2px;
+  max-width: 300px;
+  margin: auto;
+  padding: 12px 24px;
+}
